--- a/EshopBackend.Data/EshopBackend.Data.csproj
+++ b/EshopBackend.Data/EshopBackend.Data.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EshopBackend.Shared\EshopBackend.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
