account controller finished

--- a/EshopBackend.WebApi/appsettings.json
+++ b/EshopBackend.WebApi/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "EshopConnectionString": "Data Source=.;Initial Catalog=EshopDb;Integrated Security=True"
+  },
+  "Token": {
+    "Key": "Best of Best Keys in world",
+    "Issuer": "https://localhost:7228"
   }
 }
