--- a/EshopBackend.WebApi/EshopBackend.WebApi.csproj
+++ b/EshopBackend.WebApi/EshopBackend.WebApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -17,6 +18,10 @@
   <ItemGroup>
     <ProjectReference Include="..\EshopBackend.Core\EshopBackend.Core.csproj" />
     <ProjectReference Include="..\EshopBackend.Data\EshopBackend.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\sliders\origin\" />
   </ItemGroup>
 
 </Project>
