related products finished

--- a/EshopBackend.WebApi/EshopBackend.WebApi.csproj
+++ b/EshopBackend.WebApi/EshopBackend.WebApi.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\images\products\origin\" />
     <Folder Include="wwwroot\images\sliders\origin\" />
   </ItemGroup>
 
