--- a/EshopBackend.WebApi/appsettings.json
+++ b/EshopBackend.WebApi/appsettings.json
@@ -12,5 +12,6 @@
   "Token": {
     "Key": "Best of Best Keys in world",
     "Issuer": "https://localhost:7228"
-  }
+  },
+  "BaseUrl": "https://localhost:7228"
 }
